--- a/qiskit/notebook/simple_iris_classic_SVC.ipynb
+++ b/qiskit/notebook/simple_iris_classic_SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "id": "25361127-056f-414d-9c58-dc3e4dcf87a7",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "f11cbcf2-a8a5-44e5-abc2-c810c064a7aa",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "((150, 4), (120, 4))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "4de55fbf-9905-4b9d-9dcd-3d55a2682b62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f32837b57b0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f086025b3d0>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "dafbf91f-df7a-4bde-a15d-262b5554c71d",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "id": "d0558240-41c4-4a85-bf99-e2be50b55782",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "a3566e42-119b-48c1-87b1-9ba4e5037b38",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "id": "db6c278c-be53-4c4d-8241-1fe370bfbe8c",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "id": "d097aba3-2344-4e1b-bd46-4d47dd431d3c",
    "metadata": {},
    "outputs": [
